--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^17.0.23"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.17.3",
     "server": "^1.0.37"
   }
